currently getting a segmentation fault in drive_21cmMC_streamlined.c, failing to get enough memory. I'll try lowering the memory allocation in the program

--- a/public_21CMvFAST_MC/Programs/Makefile
+++ b/public_21CMvFAST_MC/Programs/Makefile
@@ -29,7 +29,8 @@ OBJ_FILES = perturb_field \
 	create_dens_boxes_for_LC \
 	Createfcoll_ionisation_LC \
 	smooth_output_box \
-	folder_smooth
+	folder_smooth \
+	init
 
 
 #########################################################################
